changed the view and open link titles & recentered the portfolio cover images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -571,6 +571,11 @@ section {
   opacity: 1;
   bottom: 0;
 }
+#portfolio-reimagine-urban-spaces{
+  margin-left: 95px;
+  margin-right: 30px;
+}
+
 
 /*--------------------------------------------------------------
 # Portfolio Details
